Evaluator, prepareEvaluation, bug -> use ProcessBuilder instead of Process for waitFor()